# Buckey

./: .gitignore  Doxyfile  README.md  configure  configure.ac
include/core/: Buckey.h  BuckeyLogger.h  CoreMode.h  DynamicGrammar.h  EchoMode.h  EventData.h  EventSource.h  Mode.h  ModeControlEventData.h  OutputEventData.h  PromptEventData.h  PromptResult.h  ReplyType.h  Service.h  ServiceControlEventData.h  SoundEffects.h
include/filters/: PerWordSingleReplacementFilter.h  StringHelper.h  TextFilter.h  TextFilterDictionaries.doxc
include/sphinx/: HypothesisEventData.h  SphinxDecoder.h  SphinxHelper.h  SphinxMode.h  SphinxService.h
include/tts/: AsyncSpeechRequestEventData.h  MimicTTSService.h  SpeechPreparedEventData.h  TTSService.h
src/: Makefile  Makefile.am  Makefile.in  main.cpp
src/core/: Buckey.cpp  BuckeyLogger.cpp  CoreMode.cpp  DynamicGrammar.cpp  EchoMode.cpp  EventData.cpp  EventSource.cpp  Makefile  Makefile.am  Makefile.in  Mode.cpp  ModeControlEventData.cpp  OutputEventData.cpp  PromptEventData.cpp  PromptResult.cpp  ReplyType[REMOVED]  Service.cpp  ServiceControlEventData.cpp
src/core/.deps/: buckey-Buckey.Po  buckey-CoreMode.Po  buckey-DynamicGrammar.Po  buckey-EchoMode.Po  buckey-EventData.Po  buckey-EventSource.Po  buckey-Mode.Po  buckey-ModeControlEventData.Po  buckey-OutputEventData.Po  buckey-PromptResult.Po  buckey-Service.Po  buckey-ServiceControlEventData.Po
src/doc/: Event Handling.txt  buckey-conversations.txt  buckey-io.txt  main-page.txt  mode-vs-service.txt
src/filters/: Makefile  Makefile.in  PerWordSingleReplacementFilter.cpp  StringHelper.cpp  TextFilter.cpp
src/filters/.deps/: buckey-PerWordSingleReplacementFilter.Po  buckey-StringHelper.Po  buckey-TextFilter.Po
src/sphinx/: HypothesisEventData.cpp  Makefile  Makefile.in  SphinxDecoder.cpp  SphinxMode.cpp  SphinxService.cpp
src/sphinx/.deps/: buckey-HypothesisEventData.Po  buckey-SphinxDecoder.Po  buckey-SphinxMode.Po  buckey-SphinxService.Po
src/tts/: AsyncSpeechRequestEventData.cpp  Makefile  Makefile.in  MimicTTSService.cpp  SpeechPreparedEventData.cpp  TTSService.cpp
src/tts/.deps/: buckey-AsyncSpeechRequestEventData.Po  buckey-MimicTTSService.Po  buckey-SpeechPreparedEventData.Po  buckey-TTSService.Po
tests/: DynamicGrammarTest.cpp  JSGF_Parse_Test.cpp  MimicTTSTest.cpp  PauseDecodersTest.cpp  PerWordSingleReplacementTest.cpp  UpdateDecodersTest.cpp  YAMLConfigLoadTest.cpp  confirm.gram  digits.gram  dynamic.gram  numbers.pwsr  singlePerWordFilter.yml  test-config.yaml
